adult/logs/create_fluctuations_15091918_590.out
SLURM_JOBID:  15092511
SLURM_ARRAY_TASK_ID:  590
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 4, 0.002, 640)


